--- a/calculator/templates/home.html
+++ b/calculator/templates/home.html
@@ -1,33 +1,25 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
+
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>calculator</title>
-    <h1>Calculator</h1>
+    <title>Home_Page</title>
 </head>
 <body style="background-color: lightyellow">
-    <hr>
-
-    <h2>Simple Calculator</h2>
-
-    <h3>for X and Y please enter only <br></h3>
-    <h3 style="color:red">Number</h3>
-    <h3>for OPERATOR please enter only</h3>
-    <h3 style="color:red">+,&emsp;-,&emsp;*,&emsp;/</h3>
-
-    <form action="/input/" method="post">
-    <label for="x">X: &emsp;&emsp;&nbsp;&nbsp;</label>
-    <input id="x" type="text" name="x" value="{{ current_x }}" placeholder="number">
-    <p>
-    <label for="operator">Operator: </label>
-    <input id="operator" type="text" name="operator" value="{{ current_operator }}" placeholder="+,-,*,/">
-    </p>
-    <label for="y">Y: &emsp;&emsp;&nbsp;&nbsp;</label>
-    <input id="y" type="text" name="y" value="{{ current_y }}" placeholder="number">
-    <input type="submit" value="calculate">
-    </form>
+<form action="">
+<h1>this is is home.html</h1>
+ Enter 1st number (this is X var) : <input type="text" name="num1"><br>
+ Enter 2st number (this is Y var) : <input type="text" name="num2"><br>
+ <input type="submit"> <br><br>
+ <button type="button" id="add" name="add" value="add">Add</button>
+ <button type="button" id="add" name="add" value="add">Subtract</button>
+ <button type="button" id="add" name="add" value="add">Multiple</button>
+ <button type="button" id="add" name="add" value="add">Divide</button>
 
 
 
+</form>
 </body>
 </html>
+
