test GET from old calculator app--[function perfectly]

--- a/calculator/templates/home.html
+++ b/calculator/templates/home.html
@@ -7,7 +7,7 @@
     <title>Home_Page</title>
 </head>
 <body style="background-color: lightyellow">
-<form action="{% url "calculate" %}" method="post">
+<form action="{% url "calculate" %}" method="get">
 
 {% csrf_token %}
 
