test GET from old calculator app--[function perfectly]__v2

--- a/calculator/templates/home.html
+++ b/calculator/templates/home.html
@@ -22,7 +22,7 @@
 <label id="log_label" for="log_label">Log :</label> <br><br>
     <!--<input type="submit" value="Clear_All" name="Clear_btn"> -->
     {% for i in log %}
-    <form action="{% url 'delete' i.id %}" method="post">
+    <form action="{% url 'delete' i.id %}" method="get">
         {% csrf_token %}
     <!--
         <textarea id="log_table" rows="20" cols="50"> to show i number use { { i.id }}_:
